--- a/operations.html
+++ b/operations.html
@@ -19,7 +19,8 @@ function operaciones(op)
          multiplicar: function multiplicarNumeros(n1, n2) {
             return (parseInt(n1) * parseInt(n2));
         },        
-        
+         dividir: function dividirNumeros(n1, n2) {
+            return (parseInt(n1) / parseInt(n2));
         }
 
 
@@ -56,7 +57,10 @@ function operaciones(op)
                 var resultado = ops.multiplicar(num1, num2);
                 alert(resultado);
                 break;  
-
+             case 'dividir':
+                var resultado = ops.dividir(num1, num2);
+                alert(resultado);
+                break;
         }
     }
 
@@ -76,6 +80,7 @@ function operaciones(op)
     <input type="button" value="SUMAR" onclick="operaciones('sumar'); return false;" /><br />
     <input type="button" value="RESTAR" onclick="operaciones('restar'); return false;" /><br />
     <input type="button" value="MULTIPLICAR" onclick="operaciones('multiplicar'); return false;" /><br />
+     <input type="button" value="DIVIDIR" onclick="operaciones('dividir'); return false;" />
 </form>
 
 </body>
